create all necessary components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h1>Recipe Pal</h1>
+      <app-header></app-header>
+      <app-shopping-list></app-shopping-list>
     </div>
   </div>
 </div>
