--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,3 +1,7 @@
-<section>
-    <h2>Shopping List</h2>
-</section>
+<div class="row">
+    <div class="col-xs-10">
+        <app-shopping-list-edit></app-shopping-list-edit>
+        <hr>
+        <p>The list</p>
+    </div>
+</div>
