--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
-<main>
-  <app-header></app-header>
-  <app-recipes></app-recipes>
-  <app-shopping-list></app-shopping-list>
-</main>
+<app-header></app-header>
+
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <app-recipes></app-recipes>
+      <app-shopping-list></app-shopping-list>
+    </div>
+  </div>
+</div>
